# prototype

./: .env.example  .gitignore  docker-compose.yml  requirements.txt
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/backend/: main.py
apps/api/backend/api/routes/: auth.py  cart_items.py  carts.py  categories.py  checkout.py  coupon_apply.py  health.py  order_history.py  orders.py  payments.py  product_detail.py  products.py  reviews.py  sessions.py
apps/api/backend/core/: config.py
apps/api/backend/db/: connection.py
apps/api/backend/schemas/: auth.py  cart.py  cart_item.py  category.py  checkout.py  coupon_apply.py  order.py  order_history.py  payment.py  product.py  product_detail.py  review.py  session.py
apps/api/backend/services/: auth_service.py  cart_item_service.py  cart_service.py  category_service.py  checkout_service.py  coupon_service.py  order_history_service.py  order_service.py  payment_service.py  product_detail_service.py  product_service.py  review_service.py  session_service.py
apps/api/tests/: test_cart_items.py  test_carts.py  test_categories.py  test_checkout.py  test_coupon_apply.py  test_db_connection.py  test_health.py  test_login.py  test_order_history.py  test_orders.py  test_payments.py  test_product_detail.py  test_products.py  test_reviews.py  test_sessions.py  test_signup.py
db/ddl/: schema.sql
db/seeds/: seed_campaigns.sql  seed_categories.sql  seed_coupons.sql  seed_products.sql
docs/product-spec/: prototype-feature-spec.md
scripts/dev/: check_db_connection.py
scripts/seed/: load_seed.ps1  load_seed.sh
(+10 files in other folders)
